--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,19 @@
     <string name="title_activity_resident_register">ResidentRegister</string>
     <string name="title_activity_resident_login">ResidentLogin</string>
     <string name="title_activity_evest_list">EvestList</string>
+
+    <string-array name="spinner_housing_options">
+        <item name="no_filter"></item>
+        <item name="south_lake">South Lake Village</item>
+        <item name="north_lake">North Lake Village</item>
+        <item name="west_lake">West Lake Village</item>
+    </string-array>
+    <string name="title_activity_event_list">EventList</string>
+    <string name="event_1">Event 1</string>
+    <string name="search">Search</string>
+    <string name="resident">Resident</string>
+    <string name="select_type_of_user">Select type of user</string>
+    <string name="staff">Staff</string>
+    <string name="title_activity_event_page">EventPage</string>
+    <string name="title_activity_rating_page">RatingPage</string>
 </resources>
