Edit Event added
The create event page was edited so that it can be used to edit as well
(changed "create event" button to confirm as well).
Edit event button shows list of all events listed (not just ones created
by user). upon clicking event, brings up create event page with the
feilds filled in with the current event info. After hitting confirm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="event_name">Event name</string>
     <string name="_1">1</string>
     <string name="create_event">Create event</string>
+    <string name="confirm">Confirm</string>
     <string name="create_new_event">Create new event</string>
     <string name="event_building">Event building</string>
     <string name="event_date">Event date</string>
@@ -57,4 +58,5 @@
     <string name="building">Building:</string>
     <string name="enter_building">Enter Building</string>
     <string name="submit">Submit</string>
+    <string name="title_activity_event_edit">event_edit</string>
 </resources>
