So Much updated dont know where to begin
-Main thing got events being added to the database as well as who's attending the event
-saving the rating score they rated the event making it not changeable
-making sure they dont insert into the database everytime they go to the event
-not sure if I mentioned already but when a user creates an Event a default poster is added
 so it shows up on the list

 -Current User and UserEvents are still an on going process to fine tune it for everything that's needed
 Things i'm planning on doing next is making sure we can delete events or edit them which shouldnt be too bad

 --Need to think of a good way to get the award system going, Just showing the information of the award is easy but
 a way to implement rewards at different milestones is what i'm thinking about.
 May just do it like First Time logging In, first event, went to 3 events, created first event etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="enter_building">Enter Building</string>
     <string name="submit">Submit</string>
     <string name="title_activity_event_edit">event_edit</string>
+    <string name="on_ward">On Ward</string>
+    <string name="rate_event">Rate Event</string>
 </resources>
