--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="title_activity_event_edit">event_edit</string>
     <string name="on_ward">On Ward</string>
     <string name="rate_event">Rate Event</string>
+    <string name="title_activity_event_feedback">EventFeedback</string>
 </resources>
